--- a/projectnameApi/pom.xml
+++ b/projectnameApi/pom.xml
@@ -9,14 +9,35 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>projectnameApi</artifactId>
+    <properties>
+        <java.version>1.8</java.version>
+        <jib.skip>true</jib.skip>
+    </properties>
+
+    <artifactId>projectnameapi</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
+
+
+   <!-- <executions>
+        <execution>
+            <phase>package</phase>
+            <goals>
+                <goal>dockerBuild</goal>
+            </goals>
+        </execution>
+    </executions>
+-->
 
 
 </project>
