--- a/projectnameService/pom.xml
+++ b/projectnameService/pom.xml
@@ -59,6 +59,8 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!-- Test containers required dependencies start -->
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -78,16 +80,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna-platform</artifactId>
-            <version>5.8.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
-
+        <!-- Test containers required dependencies end -->
 
     </dependencies>
 
@@ -168,26 +164,26 @@
                         </rulesets>
                     </configuration>
                 </plugin>
-             <!--   <plugin>
-                    <groupId>com.google.cloud.tools</groupId>
-                    <artifactId>jib-maven-plugin</artifactId>
+                <!--   <plugin>
+                       <groupId>com.google.cloud.tools</groupId>
+                       <artifactId>jib-maven-plugin</artifactId>
 
 
-                    <version>2.8.0</version>
-                    <configuration>
-                        <from>
-                            <image>gcr.io/distroless/java:8</image>
-                        </from>
-                        <allowInsecureRegistries>true</allowInsecureRegistries>
-                        <to>
-                            <image>dockermusa/repo:springboot-template</image>
-                        </to>
-                        <container>
-                            <mainClass>com.clairvoyant.springboottemplate.SpringbootTemplateApplication</mainClass>
-                            <user>nobody:nogroup</user>
-                        </container>
-                    </configuration>
-                </plugin>-->
+                       <version>2.8.0</version>
+                       <configuration>
+                           <from>
+                               <image>gcr.io/distroless/java:8</image>
+                           </from>
+                           <allowInsecureRegistries>true</allowInsecureRegistries>
+                           <to>
+                               <image>dockermusa/repo:springboot-template</image>
+                           </to>
+                           <container>
+                               <mainClass>com.clairvoyant.springboottemplate.SpringbootTemplateApplication</mainClass>
+                               <user>nobody:nogroup</user>
+                           </container>
+                       </configuration>
+                   </plugin>-->
             </plugins>
         </pluginManagement>
     </build>
