--- a/pom.xml
+++ b/pom.xml
@@ -50,26 +50,27 @@
                     </executions>
                 </plugin>
 
-                <plugin>
+               <plugin>
                     <groupId>com.google.cloud.tools</groupId>
                     <artifactId>jib-maven-plugin</artifactId>
 
 
                     <version>2.8.0</version>
                     <configuration>
-                        <from>
+                       <!-- <from>
                             <image>gcr.io/distroless/java:8</image>
-                        </from>
+                        </from>-->
                         <allowInsecureRegistries>true</allowInsecureRegistries>
                         <to>
                             <image>springboot-template</image>
                         </to>
                         <container>
                             <mainClass>com.clairvoyant.springboottemplate.SpringbootTemplateApplication</mainClass>
-                            <user>nobody:nogroup</user>
+                            <!--<user>nobody:nogroup</user>-->
                         </container>
                     </configuration>
                 </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
