--- a/projectnameService/pom.xml
+++ b/projectnameService/pom.xml
@@ -59,6 +59,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <!-- Test containers required dependencies start -->
         <dependency>
@@ -164,26 +169,26 @@
                         </rulesets>
                     </configuration>
                 </plugin>
-                <!--   <plugin>
+                   <plugin>
                        <groupId>com.google.cloud.tools</groupId>
                        <artifactId>jib-maven-plugin</artifactId>
 
 
                        <version>2.8.0</version>
                        <configuration>
-                           <from>
+                           <!--<from>
                                <image>gcr.io/distroless/java:8</image>
-                           </from>
+                           </from>-->
                            <allowInsecureRegistries>true</allowInsecureRegistries>
                            <to>
                                <image>dockermusa/repo:springboot-template</image>
                            </to>
                            <container>
                                <mainClass>com.clairvoyant.springboottemplate.SpringbootTemplateApplication</mainClass>
-                               <user>nobody:nogroup</user>
+                               <!--<user>nobody:nogroup</user>-->
                            </container>
                        </configuration>
-                   </plugin>-->
+                   </plugin>
             </plugins>
         </pluginManagement>
     </build>
